--- a/src/views/gutenberg-blocks/blocks/faceted-search/theme-search/scss/_layout.scss
+++ b/src/views/gutenberg-blocks/blocks/faceted-search/theme-search/scss/_layout.scss
@@ -179,6 +179,7 @@
 				width: 100%;
 				max-width: 100% !important;
 				margin: 0;
+				box-sizing: border-box;
 			}
 
 			.filters-components-list {
